corrected navbar on small devices

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -144,3 +144,16 @@ background-attachment: fixed !important;
       display:none;
     }
 }
+@media screen and (max-width: 990px){
+	.navbar-brand
+	{
+		margin-right:0;
+	}
+}
+@media screen and (min-width: 768px) and (max-width: 990px)
+{
+	.navbar-header
+	{
+		margin-left: 15rem;
+	}
+}
